apps/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: apps
spec:
  selector:
    app: freshrss
  ports:
    - name: http
      port: 80
      targetPort: http
